@@ -1,19 +1,12 @@
 package com.alibaba.fastjson2.util;
 
-import java.lang.invoke.*;
-import java.lang.management.ManagementFactory;
-import java.lang.reflect.Constructor;
 import java.lang.reflect.Field;
-import java.nio.charset.Charset;
-import java.util.List;
 import java.util.function.*;
 
 public class JDKUtils {
     public static final int JVM_VERSION;
 
-    public static final boolean JAVAC_UNNAMED;
-    public static final boolean ILLEGAL_ACCESS_PERMIT;
-    public static final boolean LANG_UNNAMED;
+    public static final boolean LANG_UNNAMED = false;
 
     static final Field FIELD_STRING_VALUE;
     static final long FIELD_STRING_VALUE_OFFSET;
@@ -26,13 +19,9 @@ public class JDKUtils {
     public static final Class CLASS_TRANSIENT;
     public static final byte BIG_ENDIAN;
 
-    public static final boolean UNSAFE_SUPPORT = false;
-    public static final Function<byte[], String> UNSAFE_UTF16_CREATOR;
-    public static final Function<byte[], String> UNSAFE_ASCII_CREATOR;
+    public static final boolean UNSAFE_SUPPORT;
 
     static {
-        String vmVendor = "", vmName = "";
-
         int jvmVersion = -1;
         try {
             String property = System.getProperty("java.specification.version");
@@ -40,9 +29,6 @@ public class JDKUtils {
                 property = property.substring(2);
             }
             jvmVersion = Integer.parseInt(property);
-
-            vmName = System.getProperty("java.vm.name");
-            vmVendor = System.getProperty("java.vm.vendor");
         } catch (Throwable ignored) {
         }
 
@@ -68,14 +54,6 @@ public class JDKUtils {
 
         JVM_VERSION = jvmVersion;
 
-        List<String> inputArguments = ManagementFactory.getRuntimeMXBean().getInputArguments();
-
-        JAVAC_UNNAMED = inputArguments.contains("--add-opens=com.sun.tools.javac.processing=ALL-UNNAMED");
-        ILLEGAL_ACCESS_PERMIT = inputArguments.contains("--illegal-access=permit");
-
-        LANG_UNNAMED = !vmVendor.contains("GraalVM") && !vmName.contains("Substrate")
-                && (inputArguments.contains("--add-opens=java.base/java.lang=ALL-UNNAMED") || JVM_VERSION <= 11);
-
         if (JVM_VERSION == 8) {
             Field field = null;
             long fieldOffset = -1;
@@ -94,6 +72,16 @@ public class JDKUtils {
             FIELD_STRING_VALUE = null;
             FIELD_STRING_VALUE_OFFSET = -1;
         }
+
+        boolean unsafeSupport = false;
+        unsafeSupport = ((Predicate) o -> {
+            try {
+                return UnsafeUtils.UNSAFE != null;
+            } catch (Throwable ignored) {
+                return false;
+            }
+        }).test(null);
+        UNSAFE_SUPPORT = unsafeSupport;
 
         Boolean bigEndian = null;
         if (JDKUtils.JVM_VERSION > 8 && UNSAFE_SUPPORT && LANG_UNNAMED) {
@@ -117,9 +105,6 @@ public class JDKUtils {
         BIG_ENDIAN = bigEndian == null
                 ? -1
                 : bigEndian.booleanValue() ? (byte) 1 : (byte) 0;
-
-        UNSAFE_UTF16_CREATOR = null;
-        UNSAFE_ASCII_CREATOR = null;
     }
 
     public static boolean isSQLDataSourceOrRowSet(Class type) {
@@ -137,87 +122,5 @@ public class JDKUtils {
         }
 
         return str.toCharArray();
-    }
-
-    public static BiFunction<char[], Boolean, String> getStringCreatorJDK8() throws Throwable {
-        MethodHandles.Lookup lookup = getLookup();
-
-        MethodHandles.Lookup caller = lookup.in(String.class);
-
-        MethodHandle handle = caller.findConstructor(
-                String.class, MethodType.methodType(void.class, char[].class, boolean.class)
-        );
-
-        CallSite callSite = LambdaMetafactory.metafactory(
-                caller,
-                "apply",
-                MethodType.methodType(BiFunction.class),
-                handle.type().generic(),
-                handle,
-                handle.type()
-        );
-        return (BiFunction) callSite.getTarget().invokeExact();
-    }
-
-    public static Function<byte[], String> getStringCreatorJDK11() throws Throwable {
-        MethodHandles.Lookup lookup = getLookup();
-
-        Class clazz = Class.forName("java.lang.StringCoding");
-        MethodHandles.Lookup caller = lookup.in(clazz);
-        MethodHandle handle = caller.findStatic(
-                clazz,
-                "newStringLatin1",
-                MethodType.methodType(String.class, byte[].class)
-        );
-
-        CallSite callSite = LambdaMetafactory.metafactory(
-                caller,
-                "apply",
-                MethodType.methodType(Function.class),
-                handle.type().generic(),
-                handle,
-                handle.type()
-        );
-        return (Function<byte[], String>) callSite.getTarget().invokeExact();
-    }
-
-    public static BiFunction<byte[], Charset, String> getStringCreatorJDK17() throws Throwable {
-        MethodHandles.Lookup lookup = getLookup();
-
-        MethodHandles.Lookup caller = lookup.in(String.class);
-        MethodHandle handle = caller.findStatic(
-                String.class, "newStringNoRepl1", MethodType.methodType(String.class, byte[].class, Charset.class)
-        );
-
-        CallSite callSite = LambdaMetafactory.metafactory(
-                caller,
-                "apply",
-                MethodType.methodType(BiFunction.class),
-                handle.type().generic(),
-                handle,
-                handle.type()
-        );
-        return (BiFunction<byte[], Charset, String>) callSite.getTarget().invokeExact();
-    }
-
-    private static MethodHandles.Lookup getLookup() throws Exception {
-        MethodHandles.Lookup lookup;
-        if (JDKUtils.JVM_VERSION >= 17) {
-            Constructor<MethodHandles.Lookup> constructor = MethodHandles.Lookup.class.getDeclaredConstructor(Class.class, Class.class, int.class);
-            constructor.setAccessible(true);
-            lookup = constructor.newInstance(
-                    String.class,
-                    null,
-                    -1 // Lookup.TRUSTED
-            );
-        } else {
-            Constructor<MethodHandles.Lookup> constructor = MethodHandles.Lookup.class.getDeclaredConstructor(Class.class, int.class);
-            constructor.setAccessible(true);
-            lookup = constructor.newInstance(
-                    String.class,
-                    -1 // Lookup.TRUSTED
-            );
-        }
-        return lookup;
     }
 }
